Fixed bug #44673 (With CGI argv/argc starts from arguments, not from script)